# fMRI

./: .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: publish-neuro-fpca-fmri.yml
docs/: Makefile  conf.py  developers.rst  group_pipeline.rst  index.rst  installation.rst  make.bat  math.rst  running.rst  usage.rst  utils.rst  utils_old.rst
docs/_static/: ml_hyperparameters.json  status_fMRI_participants-example.csv
src/PCAGroupDiscrimination/: build_signals_from_files.py  ml_analyzer.py  ml_tester.py  nn_wrapper.py  process_signals.py  signal_aligner.py  stat-bck.py  stat.py  test_pairs.json  utils.py
src/PCAGroupDiscrimination/cli/: fmri_fpca_pipeline.py  run_pipeline.sh
src/fPCA/: b_spline_bspline.py  b_spline_skfda.py  evaluate_lambda.py  fpca.py  gcv_solver.py  lags_durations.py  pc_similarity.py  preprocess-bck-2026-07-08.py  preprocess.py  represent_pc.py  similarity.py  utils.py
src/fPCA/cli/: compare_pcs.py  downloaod_nii_file.py  find_best_lags.py  fpca_main.py  preprocess_multiple_files_temp.sh  preprocess_nii_file.py  run_fpca.sh  run_parameter_combinations.sh  run_parameter_combinations_example.sh  run_parameter_combinations_powershell.ps1  run_parameter_combinations_powershell_example.ps1
src/fmri/: __init__.py  b_spline_bspline.py  b_spline_skfda.py  evaluate_lambda.py  find_best_lags.py  fmri-back.py  fmri.py  gcv_solver.py  pc_similarity.py  peaks_similarity.py  peaks_similarity_old_score.py  peaks_similarity_v1.py  preprocess.py  represent_pc.py  similarity.py  utils.py
src/fmri/PCACorrelator/: blocks_design.csv  classify_pcs.py  heatmap_design.py  regions_class.csv  regions_class_back.csv  regions_class_chatgpt52.csv  settings.py
src/fmri/PCACorrelator/output/: best_pc_per_feature.txt  detailed_region_analysis.txt  full_correlation_results.csv  spatial_correlation_summary.txt
src/fmri/alternative_code/: evaluate_lambda.py  main.py  main_old.py
src/fmri/analysis_exp_visual_audio/: classify_pcs.py  heatmap_design.py  settings.py
src/fmri/analysis_exp_visual_audio/old-code/: classify_pcs_back.py  classify_pcs_v0.py  classify_pcs_v1.py  classify_pcs_v2.py  classify_pcs_v3.py  classify_pcs_v4.py  classify_pcs_v5.py  classify_pcs_work.py  diag.py
src/fmri/analysis_exp_visual_audio/output/: detailed_region_analysis.txt  full_correlation_results.csv  spatial_correlation_summary.txt
src/fmri/cli/: compare_pcs.py  compare_pcs_bck.py  compare_peaks.py  compare_peaks_between_movements.py  compare_peaks_between_movements_avg_comp.py  compare_peaks_old.py  convert_npz_format.py  find_best_lags.py  fmri_main.py  nifti_viewer.py  preprocess_multiple_files.sh  preprocess_nii_file.py  run_compare_pcs_combinations.sh  run_parameter_combinations.sh  run_parameter_combinations2.sh  run_parameter_combinations_example.sh  run_parameter_combinations_powershell.ps1  run_parameter_combinations_powershell_temp.ps1  run_parameter_combinations_temp.sh  run_parameter_combinations_temp2.sh  run_parameter_combinations_temp3.sh  statistics_outputs.py  temp.py
src_old/fmri/: evaluate_lambda.py  fmri.py  pc_similarity.py  peaks_similarity.py  utils.py
src_old/fmri/alternative_code/: b-spline.py  pca.py
src_old/fmri/cli/: compare_pcs.py  compare_pcs_bck.py  fmri_main.py  preprocess_multiple_files.sh  run_parameter_combinations.sh  run_parameter_combinations_temp.sh
tests/: __init__.py  test_compare_peaks.py  test_fmri.py  test_functional_pca.py  test_gcv.py
tests/prepare_synthetic_test_files/: create_mask.py  extract_voxels.py
