[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Neuro-fPCA-fMRI"
version = "0.0.5"
description = "Functional PCA on fMRI data to extract dominant temporal components."
readme = "README.rst"
authors = [
    { name = "Refael Kohen", email = "refael.kohen@gmail.com" }
]
maintainers = [
    { name = "Refael Kohen", email = "refael.kohen@gmail.com" }
]
classifiers = [
    # Add any classifiers you need.
]
license = { text = "GNU General Public License v3" }
dependencies = [
    "pip",
    "bump2version==0.5.11",
    "wheel==0.33.6",
    "watchdog==6.0.0",
    "tox==3.14.0",
    "coverage==4.5.4",
    "Sphinx==7.2.6",
    "twine==5.0.0",
    "ruff==0.3.5",
    "pytest==6.2.4",
    "matplotlib==3.10.1",
    "nibabel==5.3.2",
    "numpy==2.2.3",
    "scipy==1.15.2",
    "scikit-fda==0.10.1",
    "dtaidistance==2.3.13"
]

# For conda
# optional: instructions to create a conda environment
# On base conda installation, run:
# conda install -c conda-forge mamba
# Then, create the environment:
# mamba create -n fmri-stable -c conda-forge python=3.11
# Activate the environment and install dependencies:
# mamba activate fmri-stable
# Install the required packages:
# mamba install -c conda-forge numpy scipy mkl mkl-service matplotlib nibabel scikit-fda dtaidistance
# Finally, install development tools via pip:
# pip install ruff pytest tox Sphinx bump2version watchdog coverage twine
# To install the package in editable mode, run:
# pip install -e .
# To run the tests, use:
# pytest tests/
# To check types, use:
# mypy fmri/
# To lint the code, use:
# ruff check fmri/
# To build the package, use:
# python -m build
# To upload the package to PyPI, use:
# twine upload dist/*
# To bump the version, use:
# bump2version patch|minor|major
# To watch for changes and run tests automatically, use:
# watchdog -p "tests/" -r "pytest tests/"
# To run the main CLI, use:
# fmri-main [args]
# To view NIfTI files, use:
# nifti-viewer [args]
# To preprocess NIfTI files, use:
# preprocess-nii-file [args]
# To compare principal components, use:
# compare-pcs [args]
# End of conda instructions

[project.scripts]
fmri-main = "fmri.cli.fmri_main:main"
nifti-viewer = "fmri.cli.nifti_viewer:main"
preprocess-nii-file = "fmri.cli.preprocess_nii_file:main"
compare-pcs = "fmri.cli.compare_pcs:main"
find-best-lags = "fmri.cli.find_best_lags:main"

[project.optional-dependencies]
dev = [
    "coverage", # for testing
    "mypy", # for type-checking
    "pytest", # for testing
    "ruff"       # for linting
]

[project.urls]
bugs = "https://github.com/yanivassf-lab/fMRI/issues"
changelog = "https://github.com/yanivassf-lab/fMRI/blob/master/changelog.md"
homepage = "https://github.com/yanivassf-lab/fMRI"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.mypy]
files = "."
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
